# engine-desktop

./: .gitignore  CMakeLists.txt
include/: Area.h  Color.h  CoreService.h  Database.h  DialogFactory.h  Dimension.h  EventHandler.h  Font.h  FontManager.h  FontService.h  FrameRegulator.h  GameObject.h  Logger.h  MathUtil.h  MediaManager.h  MediaMusic.h  MediaSound.h  MixerService.h  Point.h  Primitives.h  Properties.h  Random.h  Renderer.h  ResultSet.h  SensitiveAreas.h  Service.h  Services.h  StringUtil.h  Surface.h  SurfaceUtil.h  System.h  Text.h  Texture.h  Window.h
include/components/: AbstractDialog.h  Button.h  ConfirmationDialog.h  InformationDialog.h
include/components/skins/: ButtonSkin.h
src/: Area.cpp  Color.cpp  CoreService.cpp  Database.cpp  DialogFactory.cpp  Dimension.cpp  EventHandler.cpp  FileUtlis.cpp  Font.cpp  FontManager.cpp  FontService.cpp  FrameRegulator.cpp  HttpClient.cpp  Logger.cpp  MathUtil.cpp  MediaManager.cpp  MediaMusic.cpp  MediaSound.cpp  MixerService.cpp  Point.cpp  Primitives.cpp  Properties.cpp  Random.cpp  Renderer.cpp  ResultSet.cpp  SensitiveAreas.cpp  Services.cpp  StringUtil.cpp  Surface.cpp  SurfaceUtil.cpp  System.cpp  Text.cpp  TextUtils.cpp  Texture.cpp  Window.cpp
src/components/: Button.cpp  ConfirmationDialog.cpp  InformationDialog.cpp
src/components/skins/: ButtonSkin.cpp
