
CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)

FILE(GLOB_RECURSE KANGAROO_SOURCES "src/*.cpp")

SET(KANGAROO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${KANGAROO_INCLUDE_DIR})

IF(UNIX)
	ADD_DEFINITIONS(-std=c++11 -pedantic -pedantic-errors -Wall -Werror `sdl2-config --cflags`)
ELSE()
	ADD_DEFINITIONS(-Wall)
ENDIF()

SET(KANGAROO_LIB_NAME Kangaroo)
ADD_LIBRARY(${KANGAROO_LIB_NAME} STATIC ${KANGAROO_SOURCES})

